branches/0.1.4/mandriva_pptp/unit1.rst

# hash value = 136920065
unit1.message0=#208#146#208#189#208#184#208#188#208#176#208#189#208#184#208+
#181'!'


# hash value = 164078382
unit1.message1=#208#159#208#190#208#187#209#143' "'#208#159#209'€'#208#190+
#208#178#208#176#208#185#208#180#208#181#209'€ (IP '#208#184#208#187#208#184+
' '#208#184#208#188#209#143')", "'#208#152#208#188#209#143' '#209#129#208+
#190#208#181#208#180#208#184#208#189#208#181#208#189#208#184#209#143'", "'+
#208#159#208#190#208#187#209#140#208#183#208#190#208#178#208#176#209#130#208+
#181#208#187#209#140'", "'#208#159#208#176#209'€'#208#190#208#187#209#140+
'" '#208#190#208#177#209#143#208#183#208#176#209#130#208#181#208#187#209#140+
#208#189#209#139' '#208#186' '#208#183#208#176#208#191#208#190#208#187#208+
#189#208#181#208#189#208#184#209#142'.'


# hash value = 249658814
unit1.message2=#208#162#208#176#208#186' '#208#186#208#176#208#186' '#208+
#146#209#139' '#208#190#209#130#208#186#208#176#208#183#208#176#208#187#208+
#184#209#129#209#140' '#208#190#209#130' '#208#186#208#190#208#189#209#130+
#209'€'#208#190#208#187#209#143' state '#209#129#208#181#209#130#208#181#208+
#178#208#190#208#179#208#190' '#208#186#208#176#208#177#208#181#208#187#209+
#143', '#209#130#208#190' '#208#178' '#209#134#208#181#208#187#209#143#209+
#133' '#209#129#208#189#208#184#208#182#208#181#208#189#208#184#209#143' '+
#208#189#208#176#208#179#209'€'#209#131#208#183#208#186#208#184' '#208#189+
#208#176' '#209#129#208#184#209#129#209#130#208#181#208#188#209#131' '#208+
#178#209'€'#208#181#208#188#209#143' '#208#180#208#190#208#183#208#178#208+
#190#208#189#208#176' '#209#131#209#129#209#130#208#176#208#189#208#190#208+
#178#208#187#208#181#208#189#208#190' '#208#178' 20 '#209#129#208#181#208+
#186'.'


# hash value = 104749198
unit1.message3=#208#162#208#176#208#186' '#208#186#208#176#208#186' '#208+
#146#209#139' '#208#189#208#181' '#208#178#209#139#208#177#209'€'#208#176+
#208#187#208#184' '#209'€'#208#181#208#186#208#190#208#189#208#189#208#181+
#208#186#209#130', '#209#130#208#190' '#208#178#209#139#208#177#208#190#209+
'€ '#208#178#209#129#209#130#209'€'#208#190#208#181#208#189#208#189#208#190+
#208#179#208#190' '#208#178' '#208#180#208#181#208#188#208#190#208#189' p'+
'ppd(xl2tpd) '#209'€'#208#181#208#186#208#190#208#189#208#189#208#181#208+
#186#209#130#208#176' '#208#191#209'€'#208#190#208#184#208#179#208#189#208+
#190#209'€'#208#184#209'€'#208#190#208#178#208#176#208#189'.'


# hash value = 101490254
unit1.message6=#208#148#208#187#209#143' '#209#130#208#190#208#179#208#190+
', '#209#135#209#130#208#190#208#177#209#139' '#209'€'#208#176#208#183#209+
'€'#208#181#209#136#208#184#209#130#209#140' '#208#191#208#190#208#187#209+
#140#208#183#208#190#208#178#208#176#209#130#208#181#208#187#209#143#208#188+
' '#208#186#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208#184+
#209'€'#208#190#208#178#208#176#209#130#209#140' '#209#129#208#190#208#181+
#208#180#208#184#208#189#208#181#208#189#208#184#208#181' '#209#129#208#189+
#208#176#209#135#208#176#208#187#208#176' '#209#131#209#129#209#130#208#176+
#208#189#208#190#208#178#208#184#209#130#208#181' '#208#191#208#176#208#186+
#208#181#209#130' sudo.'


# hash value = 267810235
unit1.message7=#208#160#208#176#208#177#208#190#209#135#208#184#208#185' '+
#209#129#209#130#208#190#208#187

# hash value = 100017806
unit1.message8=#208#146' '#208#191#208#190#208#187#208#181' "'#208#146#209+
'€'#208#181#208#188#209#143' '#208#180#208#190#208#183#208#178#208#190#208+
#189#208#176'" '#208#188#208#190#208#182#208#189#208#190' '#208#178#208#178+
#208#181#209#129#209#130#208#184' '#208#187#208#184#209#136#209#140' '#209+
#135#208#184#209#129#208#187#208#190' '#208#178' '#208#191#209'€'#208#181+
#208#180#208#181#208#187#208#176#209#133' '#208#190#209#130' 5 '#208#180#208+
#190' 255 '#209#129#208#181#208#186'.'


# hash value = 125508510
unit1.message9=#208#173#209#130#208#176' '#208#190#208#191#209#134#208#184+
#209#143' '#208#191#208#190#208#183#208#178#208#190#208#187#209#143#208#181+
#209#130' '#208#191#208#190#208#187#209#140#208#183#208#190#208#178#208#176+
#209#130#208#181#208#187#209#143#208#188' '#208#183#208#176#208#191#209#131+
#209#129#208#186#208#176#209#130#209#140' '#208#186#208#190#208#189#209#132+
#208#184#208#179#209#131#209'€'#208#176#209#130#208#190#209'€ VPN PPTP/L2'+
'TP '#208#177#208#181#208#183' '#208#191#208#176#209'€'#208#190#208#187#209+
#143' '#208#176#208#180#208#188#208#184#208#189#208#184#209#129#209#130#209+
'€'#208#176#209#130#208#190#209'€'#208#176' '#208#184' '#208#186#208#190#208+
#189#209#132#208#184#208#179#209#131#209'€'#208#184#209'€'#208#190#208#178+
#208#176#209#130#209#140' '#209#129#208#190#208#181#208#180#208#184#208#189+
#208#181#208#189#208#184#208#181'.'


# hash value = 181353854
unit1.message10=#208#146' '#208#191#208#190#208#187#208#181' "'#208#146#209+
'€'#208#181#208#188#209#143' '#209'€'#208#181#208#186#208#190#208#189#208+
#189#208#181#208#186#209#130#208#176'" '#208#188#208#190#208#182#208#189#208+
#190' '#208#178#208#178#208#181#209#129#209#130#208#184' '#208#187#208#184+
#209#136#209#140' '#209#135#208#184#209#129#208#187#208#190' '#208#178' '#208+
#191#209'€'#208#181#208#180#208#181#208#187#208#176#209#133' '#208#190#209+
#130' 0 '#208#180#208#190' 255 '#209#129#208#181#208#186'.'


# hash value = 255021102
unit1.message11=#208#160#208#181#208#186#208#190#208#188#208#181#208#189#208+
#180#209#131#208#181#209#130#209#129#209#143' '#208#190#209#130#208#186#208+
#187#209#142#209#135#208#184#209#130#209#140' '#208#191#208#190#208#180#208+
#189#209#143#209#130#208#190#208#181' VPN PPTP/L2TP - '#209#130#208#190#208+
#179#208#180#208#176' '#209#136#208#187#209#142#208#183' '#208#187#208#190+
#208#186#208#176#208#187#209#140#208#189#208#190#208#185' '#209#129#208#181+
#209#130#208#184' '#208#190#208#191#209'€'#208#181#208#180#208#181#208#187+
#208#184#209#130#209#129#209#143' '#208#176#208#178#209#130#208#190#208#188+
#208#176#209#130#208#184#209#135#208#181#209#129#208#186#208#184'.'


# hash value = 266069678
unit1.message12=#208#161#208#181#209#130#208#181#208#178#208#190#208#185' '+
#208#184#208#189#209#130#208#181#209'€'#209#132#208#181#208#185#209#129' '+
#208#189#208#181' '#208#190#208#191#209'€'#208#181#208#180#208#181#208#187+
#208#184#208#187#209#129#209#143'.'


# hash value = 31333374
unit1.message13=#208#161#208#181#209#130#208#181#208#178#208#190#208#185' '+
#208#186#208#176#208#177#208#181#208#187#209#140' '#208#180#208#187#209#143+
' '#208#176#208#178#209#130#208#190#208#188#208#176#209#130#208#184#209#135+
#208#181#209#129#208#186#208#190#208#179#208#190' '#208#190#208#191#209'€'+
#208#181#208#180#208#181#208#187#208#181#208#189#208#184#209#143' '#209#136+
#208#187#209#142#208#183#208#176' '#208#187#208#190#208#186#208#176#208#187+
#209#140#208#189#208#190#208#185' '#209#129#208#181#209#130#208#184' '#208+
#189#208#181' '#208#191#208#190#208#180#208#186#208#187#209#142#209#135#208+
#181#208#189'.'


# hash value = 98238350
unit1.message14=#208#157#208#181' '#209#131#208#180#208#176#208#187#208#190+
#209#129#209#140' '#208#176#208#178#209#130#208#190#208#188#208#176#209#130+
#208#184#209#135#208#181#209#129#208#186#208#184' '#208#190#208#191#209'€'+
#208#181#208#180#208#181#208#187#208#184#209#130#209#140' '#209#136#208#187+
#209#142#208#183' '#208#187#208#190#208#186#208#176#208#187#209#140#208#189+
#208#190#208#185' '#209#129#208#181#209#130#208#184'.'


# hash value = 214872030
unit1.message15=#208#159#208#190#208#187#208#181' "'#208#161#208#181#209#130+
#208#181#208#178#208#190#208#185' '#208#184#208#189#209#130#208#181#209'€'+
#209#132#208#181#208#185#209#129'" '#208#183#208#176#208#191#208#190#208#187+
#208#189#208#181#208#189#208#190' '#208#189#208#181#208#178#208#181#209'€'+
#208#189#208#190'. '#208#159#209'€'#208#176#208#178#208#184#208#187#209#140+
#208#189#208#190' '#208#190#209#130' eth0 '#208#180#208#190' eth9 '#208#184+
#208#187#208#184' '#208#190#209#130' wlan0 '#208#180#208#190' wlan9.'


# hash value = 123673758
unit1.message16=#208#159#208#190#208#187#208#181' "'#208#168#208#187#209#142+
#208#183' '#208#187#208#190#208#186#208#176#208#187#209#140#208#189#208#190+
#208#185' '#209#129#208#181#209#130#208#184'" '#208#183#208#176#208#191#208+
#190#208#187#208#189#208#181#208#189#208#190' '#208#189#208#181#208#178#208+
#181#209'€'#208#189#208#190'. '#208#159#209'€'#208#176#208#178#208#184#208+
#187#209#140#208#189#208#190': xxx.xxx.xxx.xxx, '#208#179#208#180#208#181+
' xxx - '#209#135#208#184#209#129#208#187#208#190' '#208#190#209#130' 0 '#208+
#180#208#190' 255.'


# hash value = 159093678
unit1.message17=#208#159#208#190#208#187#208#181' "MTU" '#208#183#208#176+
#208#191#208#190#208#187#208#189#208#181#208#189#208#190' '#208#189#208#181+
#208#178#208#181#209'€'#208#189#208#190'. '#208#160#208#176#208#183#209'€'+
#208#181#209#136#208#181#208#189' '#208#187#208#184#209#136#209#140' '#208+
#180#208#184#208#176#208#191#208#176#208#183#208#190#208#189' [576..1460.'+
'.1492..1500]. '#208#160#208#181#208#186#208#190#208#188#208#181#208#189#208+
#180#209#131#208#181#209#130#209#129#209#143' MTU=1460.'


# hash value = 123802238
unit1.message18=#208#151#208#176#208#191#209#131#209#129#208#186' '#209#141+
#209#130#208#190#208#185' '#208#191#209'€'#208#190#208#179#209'€'#208#176+
#208#188#208#188#209#139' '#208#178#208#190#208#183#208#188#208#190#208#182+
#208#181#208#189' '#209#130#208#190#208#187#209#140#208#186#208#190' '#208+
#191#208#190#208#180' '#208#176#208#180#208#188#208#184#208#189#208#184#209+
#129#209#130#209'€'#208#176#209#130#208#190#209'€'#208#190#208#188' '#208+
#184#208#187#208#184' '#209#129' '#209'€'#208#176#208#183#209'€'#208#181#209+
#136#208#181#208#189#208#184#209#143' '#208#176#208#180#208#188#208#184#208+
#189#208#184#209#129#209#130#209'€'#208#176#209#130#208#190#209'€'#208#176+
'. '#208#157#208#176#208#182#208#188#208#184#209#130#208#181' <OK> '#208#180+
#208#187#209#143' '#208#190#209#130#208#186#208#176#208#183#208#176' '#208+
#190#209#130' '#208#183#208#176#208#191#209#131#209#129#208#186#208#176'.'+


# hash value = 196563918
unit1.message19=#208#148#209'€'#209#131#208#179#208#176#209#143' '#209#130+
#208#176#208#186#208#176#209#143' '#208#182#208#181' '#208#191#209'€'#208+
#190#208#179#209'€'#208#176#208#188#208#188#208#176' '#209#131#208#182#208+
#181' '#208#191#209#139#209#130#208#176#208#181#209#130#209#129#209#143' '+
#209#129#208#186#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208+
#184#209'€'#208#190#208#178#208#176#209#130#209#140' VPN PPTP/L2TP. '#208+
#157#208#176#208#182#208#188#208#184#209#130#208#181' <OK> '#208#180#208#187+
#209#143' '#208#190#209#130#208#186#208#176#208#183#208#176' '#208#190#209+
#130' '#208#180#208#178#208#190#208#185#208#189#208#190#208#179#208#190' '+
#208#183#208#176#208#191#209#131#209#129#208#186#208#176'.'


# hash value = 96690206
unit1.message20=#208#157#208#181#208#178#208#190#208#183#208#188#208#190#208+
#182#208#189#208#190' '#208#189#208#176#209#129#209#130#209'€'#208#190#208+
#184#209#130#209#140' VPN PPTP/L2TP '#208#178' '#209#129#208#178#209#143#208+
#183#208#184' '#209#129' '#208#190#209#130#209#129#209#131#209#130#209#129+
#209#130#208#178#208#184#208#181#208#188' '#208#191#208#176#208#186#208#181+
#209#130#208#176' pptp-linux.'


# hash value = 112571902
unit1.message21=#208#173#209#130#208#176' '#208#190#208#191#209#134#208#184+
#209#143' '#208#191#208#190#208#183#208#178#208#190#208#187#209#143#208#181+
#209#130' '#208#183#208#176#208#191#209#131#209#129#209#130#208#184#209#130+
#209#140' '#208#188#208#190#208#180#209#131#208#187#209#140' ponoff '#208+
#191#209'€'#208#184' '#209#129#209#130#208#176#209'€'#209#130#208#181' '#208+
#190#208#191#208#181#209'€'#208#176#209#134#208#184#208#190#208#189#208#189+
#208#190#208#185' '#209#129#208#184#209#129#209#130#208#181#208#188#209#139+
' '#208#184' '#209#131#209#129#209#130#208#176#208#189#208#190#208#178#208+
#184#209#130#209#140' '#209#129#208#190#208#181#208#180#208#184#208#189#208+
#181#208#189#208#184#208#181' VPN PPTP/L2TP '#208#176#208#178#209#130#208+
#190#208#183#208#176#208#179#209'€'#209#131#208#183#208#186#208#190#208#185+
'.'


# hash value = 103945310
unit1.message22=#208#157#208#181#208#178#208#190#208#183#208#188#208#190#208+
#182#208#189#208#190' '#209#129#208#190#208#183#208#180#208#176#209#130#209+
#140' '#209#143#209'€'#208#187#209#139#208#186' '#208#189#208#176' '#209'€'+
#208#176#208#177#208#190#209#135#208#181#208#188' '#209#129#209#130#208#190+
#208#187#208#181', '#209#130#208#176#208#186' '#208#186#208#176#208#186' '+
#208#184#209#129#208#191#208#190#208#187#209#140#208#183#209#131#208#181#209+
#130#209#129#209#143' '#208#189#208#181#209#129#209#130#208#176#208#189#208+
#180#208#176#209'€'#209#130#208#189#209#139#208#185' '#208#184#208#180#208+
#181#208#189#209#130#208#184#209#132#208#184#208#186#208#176#209#130#208#190+
#209'€ '#208#191#208#190#208#187#209#140#208#183#208#190#208#178#208#176#209+
#130#208#181#208#187#209#143' '#208#184'/'#208#184#208#187#208#184' '#208+
#187#208#190#208#186#208#176#208#187#208#184#208#183#208#176#209#134#208#184+
#209#143'.'


# hash value = 123381838
unit1.message23=#208#157#208#181#208#178#208#190#208#183#208#188#208#190#208+
#182#208#189#208#190' '#209#129#208#190#208#183#208#180#208#176#209#130#209+
#140' '#209#143#209'€'#208#187#209#139#208#186' '#208#189#208#176' '#209'€'+
#208#176#208#177#208#190#209#135#208#181#208#188' '#209#129#209#130#208#190+
#208#187#208#181', '#209#130#208#176#208#186' '#208#186#208#176#208#186' '+
#208#190#209#130#209#129#209#131#209#130#209#129#209#130#208#178#209#131#208+
#181#209#130' '#209#132#208#176#208#185#208#187' /usr/share/applications/'+
'ponoff.desktop.'


# hash value = 139842446
unit1.message24=#208#148#208#187#209#143' '#209#130#208#190#208#179#208#190+
', '#209#135#209#130#208#190#208#177#209#139' '#209'€'#208#176#208#183#209+
'€'#208#181#209#136#208#184#209#130#209#140' '#208#176#208#178#209#130#208+
#190#208#183#208#176#208#191#209#131#209#129#208#186' '#208#184#208#189#209+
#130#208#181#209'€'#208#189#208#181#209#130#208#176' '#208#191#209'€'#208+
#184' '#209#129#209#130#208#176#209'€'#209#130#208#181' '#209#129#208#184+
#209#129#209#130#208#181#208#188#209#139' '#209#129#208#189#208#176#209#135+
#208#176#208#187#208#176' '#209#131#209#129#209#130#208#176#208#189#208#190+
#208#178#208#184#209#130#208#181' '#208#191#208#176#208#186#208#181#209#130+
' sudo.'


# hash value = 219766990
unit1.message25=#208#157#208#181' '#209#131#209#129#209#130#208#176#208#189+
#208#190#208#178#208#187#208#181#208#189' '#208#184' '#208#189#208#181' '#208+
#183#208#176#208#191#209#131#209#137#208#181#208#189' dhclient ('#209#130+
#208#190' '#208#181#209#129#209#130#209#140' '#208#191#208#176#208#186#208+
#181#209#130' dhcp-client). '#208#146#208#190#208#183#208#188#208#190#208+
#182#208#189#209#139' '#208#191#209'€'#208#190#208#177#208#187#208#181#208+
#188#209#139' '#208#178' '#209'€'#208#176#208#177#208#190#209#130#208#181+
' '#209#129#208#181#209#130#208#184'.'


# hash value = 222489182
unit1.message26=#208#157#208#181' '#209#131#208#180#208#176#208#187#208#190+
#209#129#209#140' '#208#190#208#191#209'€'#208#181#208#180#208#181#208#187+
#208#184#209#130#209#140' IP-'#208#176#208#180#209'€'#208#181#209#129' VP'+
'N-'#209#129#208#181#209'€'#208#178#208#181#209'€'#208#176'. VPN-'#209#129+
#208#181#209'€'#208#178#208#181#209'€ '#208#189#208#181' '#208#191#208#184+
#208#189#208#179#209#131#208#181#209#130#209#129#209#143'. '#208#152#208#187+
#208#184' '#208#190#208#189' '#208#178#208#178#208#181#208#180#208#181#208+
#189' '#208#189#208#181#208#191#209'€'#208#176#208#178#208#184#208#187#209+
#140#208#189#208#190', '#208#184#208#187#208#184' '#208#191#209'€'#208#190+
#208#177#208#187#208#181#208#188#208#176' '#209#129' DNS.'


# hash value = 123169134
unit1.message27=#208#156#208#176#209'€'#209#136#209'€'#209#131#209#130#209+
#139' '#208#189#208#181' '#208#188#208#190#208#179#209#131#209#130' '#208+
#191#209'€'#208#184#209#133#208#190#208#180#208#184#209#130#209#140' '#209+
#135#208#181#209'€'#208#181#208#183' dhcp, '#209#130#208#176#208#186' '#208+
#186#208#176#208#186' '#208#189#208#181' '#209#131#209#129#209#130#208#176+
#208#189#208#190#208#178#208#187#208#181#208#189' '#208#184' '#208#189#208+
#181' '#208#183#208#176#208#191#209#131#209#137#208#181#208#189' dhclient'+
' ('#209#130#208#190' '#208#181#209#129#209#130#209#140' '#208#191#208#176+
#208#186#208#181#209#130' dhcp-client).'


# hash value = 89305006
unit1.message28=#208#157#208#181#208#187#209#140#208#183#209#143' '#208#190+
#208#191#209'€'#208#181#208#180#208#181#208#187#208#184#209#130#209#140' '+
'IP-'#208#176#208#180#209'€'#208#181#209#129' VPN-'#209#129#208#181#209'€'+
#208#178#208#181#209'€'#208#176', '#209#130#208#176#208#186' '#208#186#208+
#176#208#186' '#209#129#209#130#209'€'#208#190#208#186#208#176' '#208#180+
#208#187#209#143' '#208#178#208#178#208#190#208#180#208#176' '#208#189#208+
#181' '#208#183#208#176#208#191#208#190#208#187#208#189#208#181#208#189#208+
#176'.'


# hash value = 248165374
unit1.message29=#208#157#208#181' '#209#131#209#129#209#130#208#176#208#189+
#208#190#208#178#208#187#208#181#208#189' '#208#191#208#176#208#186#208#181+
#209#130' bind-utils. '#208#149#208#179#208#190' '#209#131#209#129#209#130+
#208#176#208#189#208#190#208#178#208#186#208#176' '#208#189#208#181#208#190+
#208#177#209#143#208#183#208#176#209#130#208#181#208#187#209#140#208#189#208+
#176', '#208#189#208#190' '#208#190#208#189#208#176' '#209#131#209#129#208+
#186#208#190#209'€'#208#184#209#130' '#208#188#208#181#209#133#208#176#208+
#189#208#184#208#183#208#188' '#208#191#209'€'#208#190#208#179#209'€'#208+
#176#208#188#208#188#208#189#208#190#208#179#208#190' '#208#180#208#190#208+
#177#208#176#208#178#208#187#208#181#208#189#208#184#209#143' '#208#188#208+
#176#209'€'#209#136#209'€'#209#131#209#130#208#176' '#208#186' vpn-'#209#129+
#208#181#209'€'#208#178#208#181#209'€'#209#131'.'


# hash value = 12284494
unit1.message30=#208#152#209#129#208#191#208#190#208#187#209#140#208#183#209+
#131#208#185#209#130#208#181' '#208#190#208#191#209#134#208#184#209#142' '+
#208#190#209#130#208#186#208#187#209#142#209#135#208#181#208#189#208#184#209+
#143' '#208#186#208#190#208#189#209#130#209'€'#208#190#208#187#209#143' s'+
'tate '#209#129#208#181#209#130#208#181#208#178#208#190#208#179#208#190' '+
#208#186#208#176#208#177#208#181#208#187#209#143' '#208#181#209#129#208#187+
#208#184' '#209#130#208#190#208#187#209#140#208#186#208#190' '#208#191#208+
#190' '#208#180#209'€'#209#131#208#179#208#190#208#188#209#131' '#208#189+
#208#181' '#209'€'#208#176#208#177#208#190#209#130#208#176#208#181#209#130+
' ('#208#190#208#177' '#209#141#209#130#208#190#208#188' '#208#191#208#190+
#208#191#209'€'#208#190#209#129#208#184#209#130' '#209#129#208#176#208#188+
#208#176' '#208#191#209'€'#208#190#208#179#209'€'#208#176#208#188#208#188+
#208#176').'


# hash value = 181901726
unit1.message31=#208#146#209#129#209#130#209'€'#208#190#208#181#208#189#208+
#189#209#139#208#185' '#208#178' '#208#180#208#181#208#188#208#190#208#189+
' pppd(xl2tpd) '#208#188#208#181#209#133#208#176#208#189#208#184#208#183#208+
#188' '#209'€'#208#181#208#186#208#190#208#189#208#189#208#181#208#186#209+
#130#208#176' '#208#189#208#181' '#209#131#208#188#208#181#208#181#209#130+
' '#208#186#208#190#208#189#209#130#209'€'#208#190#208#187#208#184#209'€'#208+
#190#208#178#208#176#209#130#209#140' state '#209#129#208#181#209#130#208+
#181#208#178#208#190#208#179#208#190' '#208#186#208#176#208#177#208#181#208+
#187#209#143', '#208#191#208#190#209#141#209#130#208#190#208#188#209#131' '+
#208#190#208#189' '#208#189#208#181' '#208#182#208#181#208#187#208#176#209+
#130#208#181#208#187#208#181#208#189' '#208#186' '#208#184#209#129#208#191+
#208#190#208#187#209#140#208#183#208#190#208#178#208#176#208#189#208#184#209+
#142'.'


# hash value = 13817534
unit1.message32=#208#146#208#181#208#180#208#184#209#130#208#181' '#208#187+
#208#190#208#179' pppd(xl2tpd) '#208#180#208#187#209#143' '#209#130#208#190+
#208#179#208#190', '#209#135#209#130#208#190#208#177#209#139' '#208#178#209+
#139#209#143#209#129#208#189#208#184#209#130#209#140' '#208#190#209#136#208+
#184#208#177#208#186#208#184' '#208#189#208#176#209#129#209#130#209'€'#208+
#190#208#185#208#186#208#184' '#209#129#208#190#208#181#208#180#208#184#208+
#189#208#181#208#189#208#184#209#143', '#208#190#209#136#208#184#208#177#208+
#186#208#184' '#208#191#209'€'#208#184' '#209#129#208#190#208#181#208#180+
#208#184#208#189#208#181#208#189#208#184#208#184' '#208#184' '#209#130'.'#208+
#180'.'


# hash value = 52999294
unit1.message33=#208#159#208#190#208#187#209#131#209#135#208#181#208#189#208+
#184#208#181' '#208#188#208#176#209'€'#209#136#209'€'#209#131#209#130#208+
#190#208#178' '#209#135#208#181#209'€'#208#181#208#183' dhcp '#208#189#208+
#181#208#190#208#177#209#133#208#190#208#180#208#184#208#188#208#190' '#208+
#180#208#187#209#143' '#208#190#208#180#208#189#208#190#208#178#209'€'#208+
#181#208#188#208#181#208#189#208#189#208#190#208#185' '#209'€'#208#176#208+
#177#208#190#209#130#209#139' '#208#187#208#190#208#186#208#176#208#187#209+
#140#208#189#208#190#208#185' '#209#129#208#181#209#130#208#184' '#208#184+
' '#208#184#208#189#209#130#208#181#209'€'#208#189#208#181#209#130#208#176+
', '#208#189#208#190' '#208#191#209'€'#208#190#208#178#208#176#208#185#208+
#180#208#181#209'€ '#208#189#208#181' '#208#178#209#129#208#181#208#179#208+
#180#208#176' '#208#184#209#133' '#208#191#209'€'#208#184#209#129#209#139+
#208#187#208#176#208#181#209#130'.'


# hash value = 16580782
unit1.message34=#208#173#209#130#208#176' '#208#190#208#191#209#134#208#184+
#209#143' '#208#189#208#176#209#129#209#130#209'€'#208#176#208#184#208#178+
#208#176#208#181#209#130' '#209#132#208#176#208#185#208#181#209'€'#208#178+
#208#190#208#187' '#208#187#208#184#209#136#209#140' '#208#180#208#187#209+
#143' '#208#184#208#189#209#130#208#181#209'€'#208#189#208#181#209#130#208+
#176', '#208#189#208#190' '#208#189#208#181' '#208#180#208#187#209#143' p'+
'2p '#208#184' '#208#189#208#181' '#208#180#208#187#209#143' '#208#180#209+
'€'#209#131#208#179#208#184#209#133' '#209#129#208#190#208#181#208#180#208+
#184#208#189#208#181#208#189#208#184#208#185'.'


# hash value = 199357118
unit1.message35=#208#158#209#130#208#188#208#181#208#189#208#184#208#178' '+
#208#191#208#190#208#187#209#131#209#135#208#181#208#189#208#184#208#181' '+
#208#188#208#176#209'€'#209#136#209'€'#209#131#209#130#208#190#208#178' '#209+
#135#208#181#209'€'#208#181#208#183' dhcp, '#208#189#208#181' '#208#177#209+
#131#208#180#209#131#209#130' '#208#190#208#180#208#189#208#190#208#178#209+
'€'#208#181#208#188#208#181#208#189#208#189#208#190' '#209'€'#208#176#208+
#177#208#190#209#130#208#176#209#130#209#140' '#208#184#208#189#209#130#208+
#181#209'€'#208#189#208#181#209#130' '#208#184' '#208#187#208#190#208#186+
#208#176#208#187#209#140#208#189#208#176#209#143' '#209#129#208#181#209#130+
#209#140', '#208#176' '#208#177#209#131#208#180#208#181#209#130' '#209'€'#208+
#176#208#177#208#190#209#130#208#176#209#130#209#140' '#209#130#208#190#208+
#187#209#140#208#186#208#190' '#208#184#208#189#209#130#208#181#209'€'#208+
#189#208#181#209#130'.'


# hash value = 161358238
unit1.message36=#208#158#209#130#208#188#208#181#208#189#208#184#209#130#209+
#140' '#208#189#208#176#209#129#209#130#209'€'#208#190#208#185#208#186#209+
#131' '#209#132#208#176#208#185#208#181#209'€'#208#178#208#190#208#187#208+
#176' '#208#191#209'€'#208#190#208#179#209'€'#208#176#208#188#208#188#208+
#190#208#185' '#209#129#209#130#208#190#208#184#209#130' '#209#130#208#190+
#208#187#209#140#208#186#208#190' '#208#181#209#129#208#187#208#184' '#209+
#132#208#176#208#185#208#181#209'€'#208#178#208#190#208#187' '#208#190#209+
#130#208#186#208#187#209#142#209#135#208#181#208#189', '#208#184#208#187#208+
#184' '#209#132#208#176#208#185#208#181#209'€'#208#178#208#190#208#187' '#208+
#146#208#176#208#188#208#184' '#209#129#208#176#208#188#208#190#209#129#209+
#130#208#190#209#143#209#130#208#181#208#187#209#140#208#189#208#190' '#208+
#189#208#176#209#129#209#130#209'€'#208#176#208#184#208#178#208#176#208#181+
#209#130#209#129#209#143'.'


# hash value = 16617630
unit1.message37=#208#149#209#129#208#187#208#184' '#208#184#208#189#209#130+
#208#181#209'€'#208#189#208#181#209#130' '#209#133#208#190#209'€'#208#190+
#209#136#208#190' '#209'€'#208#176#208#177#208#190#209#130#208#176#208#181+
#209#130' '#208#177#208#181#208#183' '#208#190#208#191#209#134#208#184#208+
#184' '#208#191#209'€'#208#190#208#179#209'€'#208#176#208#188#208#188#208+
#189#208#190#208#179#208#190' '#208#180#208#190#208#177#208#176#208#178#208+
#187#208#181#208#189#208#184#209#143' '#208#188#208#176#209'€'#209#136#209+
'€'#209#131#209#130#208#176' '#208#186' vpn-'#209#129#208#181#209'€'#208#178+
#208#181#209'€'#209#131', '#209#130#208#190' '#208#189#208#181' '#209#129+
#209#130#208#190#208#184#209#130' '#208#189#208#176#208#179#209'€'#209#131+
#208#182#208#176#209#130#209#140' '#209#129#208#184#209#129#209#130#208#181+
#208#188#209#131'.'


# hash value = 91785390
unit1.message38=#208#159#209'€'#208#184' '#208#178#209#139#208#177#208#190+
#209'€'#208#181' '#209#141#209#130#208#190#208#185' '#208#190#208#191#209+
#134#208#184#208#184' '#208#191#209'€'#208#190#208#178#208#181#209'€'#209+
#143#208#181#209#130#209#129#209#143' '#208#191#208#184#208#189#208#179' '+
'vpn-, dns-'#209#129#208#181#209'€'#208#178#208#181#209'€'#208#176', '#208+
#191#208#184#208#189#208#179' '#209#136#208#187#209#142#208#183#208#176' '+
#208#187#208#190#208#186#208#176#208#187#209#140#208#189#208#190#208#185' '+
#209#129#208#181#209#130#208#184', '#208#191#208#184#208#189#208#179' yan'+
'dex.ru, '#208#178#209#139#209#143#208#178#208#187#209#143#209#142#209#130+
#209#129#209#143' '#208#190#209#129#208#189#208#190#208#178#208#189#209#139+
#208#181' '#208#191#209'€'#208#190#208#177#208#187#208#181#208#188#209#139+
', '#208#178#209#139#208#178#208#190#208#180#209#143' '#209#129#208#190#208+
#190#208#177#209#137#208#181#208#189#208#184#209#143'.'


# hash value = 135498862
unit1.message39=#208#158#209#130#208#188#208#181#208#189#208#184#209#130#209+
#140' '#209#141#209#130#209#131' '#208#190#208#191#209#134#208#184#209#142+
' '#209#129#209#130#208#190#208#184#209#130' '#209#130#208#190#208#187#209+
#140#208#186#208#190' '#208#181#209#129#208#187#208#184' '#209#131' '#208+
#146#208#176#209#129' '#209#129#209#130#208#176#208#177#208#184#208#187#209+
#140#208#189#209#139#208#181' '#208#187#208#190#208#186#208#176#208#187#209+
#140#208#189#208#176#209#143' '#209#129#208#181#209#130#209#140' '#208#184+
' '#208#184#208#189#209#130#208#181#209'€'#208#189#208#181#209#130', '#208+
#184' '#208#190#208#189#208#184' '#208#189#208#184#208#186#208#190#208#179+
#208#180#208#176' '#208#189#208#181' '#208#191#208#176#208#180#208#176#209+
#142#209#130'.'


# hash value = 65670878
unit1.message40=#208#173#209#130#208#176' '#208#190#208#191#209#134#208#184+
#209#143' '#208#177#208#187#208#190#208#186#208#184#209'€'#209#131#208#181+
#209#130' '#208#178#209#129#208#181' '#208#178#209#129#208#191#208#187#209+
#139#208#178#208#176#209#142#209#137#208#184#208#181' '#209#129#208#190#208+
#190#208#177#209#137#208#181#208#189#208#184#209#143' '#208#184#208#183' '+
#209#130#209'€'#208#181#209#143', '#208#176' '#209#130#208#176#208#186#208+
#182#208#181' '#208#190#209#130#208#186#208#187#209#142#209#135#208#176#208+
#181#209#130' '#208#191#209'€'#208#190#208#178#208#181#209'€'#208#186#209+
#131' dns-, vpn-'#209#129#208#181#209'€'#208#178#208#181#209'€'#208#176','+
' '#209#136#208#187#209#142#208#183#208#176' '#208#187#208#190#208#186#208+
#176#208#187#209#140#208#189#208#190#208#185' '#209#129#208#181#209#130#208+
#184' '#208#184' '#208#181#209#129#209#130#209#140' '#208#187#208#184' '#208+
#184#208#189#209#130#208#181#209'€'#208#189#208#181#209#130'.'


# hash value = 79134654
unit1.message41=#208#159#209'€'#208#190#208#178#208#181#209'€'#208#186#208+
#176' '#208#191#208#190#208#186#208#176#208#183#208#176#208#187#208#176','+
' '#209#135#209#130#208#190' '#208#188#208#176#209'€'#209#136#209'€'#209#131+
#209#130#209#139' '#209#135#208#181#209'€'#208#181#208#183' dhcp '#208#189+
#208#181' '#208#191#209'€'#208#184#209#133#208#190#208#180#209#143#209#130+
'. '#208#158#208#180#208#189#208#190#208#178#209'€'#208#181#208#188#208#181+
#208#189#208#189#208#176#209#143' '#209'€'#208#176#208#177#208#190#209#130+
#208#176' '#208#184#208#189#209#130#208#181#209'€'#208#189#208#181#209#130+
#208#176' '#208#184' '#208#187#208#190#208#186'. '#209#129#208#181#209#130+
#208#184' '#208#189#208#181' '#208#189#208#176#209#129#209#130#209'€'#208+
#190#208#181#208#189#208#176'.'


# hash value = 114029982
unit1.message42=#208#159#208#190#208#187#209#131#209#135#208#181#208#189#208+
#184#208#181' '#208#188#208#176#209'€'#209#136#209'€'#209#131#209#130#208+
#190#208#178' '#209#135#208#181#209'€'#208#181#208#183' dhcp '#208#177#209+
#131#208#180#208#181#209#130' '#208#190#209#130#208#188#208#181#208#189#208+
#181#208#189#208#190', '#209#130#208#176#208#186' '#208#186#208#176#208#186+
' '#208#188#208#176#209'€'#209#136#209'€'#209#131#209#130#209#139' '#209#135+
#208#181#209'€'#208#181#208#183' dhcp '#208#189#208#181' '#208#191#209'€'#208+
#184#209#133#208#190#208#180#209#143#209#130'.'


# hash value = 26901614
unit1.message43='Vpn-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#189#208#181' '#208#191#208#184#208#189#208#179#209#131#208#181#209#130#209+
#129#209#143'. '#208#163#209#129#209#130#209'€'#208#176#208#189#208#184#209+
#130#208#181' '#208#191#209'€'#208#190#208#177#208#187#208#181#208#188#209+
#131' '#208#184' '#208#183#208#176#208#189#208#190#208#178#208#190' '#208+
#183#208#176#208#191#209#131#209#129#209#130#208#184#209#130#208#181' '#208+
#186#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208#176#209#130+
#208#190#209'€.'


# hash value = 54413854
unit1.message44=#208#168#208#187#209#142#208#183' '#208#187#208#190#208#186+
#208#176#208#187#209#140#208#189#208#190#208#185' '#209#129#208#181#209#130+
#208#184' '#208#189#208#181' '#208#191#208#184#208#189#208#179#209#131#208+
#181#209#130#209#129#209#143' '#208#184#208#187#208#184' '#209#130#208#181+
#209'€'#209#143#209#142#209#130#209#129#209#143' '#208#191#208#176#208#186+
#208#181#209#130#209#139'. '#208#163#209#129#209#130#209'€'#208#176#208#189+
#208#184#209#130#208#181' '#208#191#209'€'#208#190#208#177#208#187#208#181+
#208#188#209#131' '#208#184' '#208#183#208#176#208#189#208#190#208#178#208+
#190' '#208#183#208#176#208#191#209#131#209#129#209#130#208#184#209#130#208+
#181' '#208#186#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208+
#176#209#130#208#190#209'€.'


# hash value = 234366782
unit1.message45=#208#159#208#184#208#189#208#179#209#131#208#181#209#130#209+
#129#209#143' vpn-'#209#129#208#181#209'€'#208#178#208#181#209'€. '#208#158+
#208#182#208#184#208#180#208#176#208#185#209#130#208#181'...'


# hash value = 7717134
unit1.message46=#208#158#208#191#209'€'#208#181#208#180#208#181#208#187#209+
#143#208#181#209#130#209#129#209#143' ip-'#208#176#208#180#209'€'#208#181+
#209#129' vpn-'#209#129#208#181#209'€'#208#178#208#181#209'€'#208#176' '#209+
#135#208#181#209'€'#208#181#208#183' '#208#186#208#190#208#188#208#176#208+
#189#208#180#209#131' ping. '#208#158#208#182#208#184#208#180#208#176#208+
#185#209#130#208#181'...'


# hash value = 189349230
unit1.message47=#208#159#208#184#208#189#208#179#209#131#208#181#209#130#209+
#129#209#143' '#209#136#208#187#209#142#208#183' '#208#187#208#190#208#186+
#208#176#208#187#209#140#208#189#208#190#208#185' '#209#129#208#181#209#130+
#208#184'. '#208#158#208#182#208#184#208#180#208#176#208#185#209#130#208#181+
'...'


# hash value = 262734238
unit1.message48=#208#158#209#129#209#131#209#137#208#181#209#129#209#130#208+
#178#208#187#209#143#208#181#209#130#209#129#209#143' '#208#191#208#190#208+
#180#208#179#208#190#209#130#208#190#208#178#208#186#208#176' '#209#129#208+
#181#209#130#208#184' '#208#180#208#187#209#143' '#208#191#209'€'#208#190+
#208#178#208#181#209'€'#208#186#208#184' '#208#191#209'€'#208#184#209#133+
#208#190#208#180#209#143#209#130' '#208#187#208#184' '#208#188#208#176#209+
'€'#209#136#209'€'#209#131#209#130#209#139' '#209#135#208#181#209'€'#208#181+
#208#183' dhcp. '#208#158#208#182#208#184#208#180#208#176#208#185#209#130+
#208#181'...'


# hash value = 194289038
unit1.message49=#208#161#208#181#209#130#209#140' '#208#191#208#190#208#180+
#208#179#208#190#209#130#208#190#208#178#208#187#208#181#208#189#208#176' '+
#208#180#208#187#209#143' '#208#191#209'€'#208#190#208#178#208#181#209'€'#208+
#186#208#184' '#208#191#209'€'#208#184#209#133#208#190#208#180#209#143#209+
#130' '#208#187#208#184' '#208#188#208#176#209'€'#209#136#209'€'#209#131#209+
#130#209#139' '#209#135#208#181#209'€'#208#181#208#183' dhcp. '#208#146#209+
#139#208#183#209#139#208#178#208#176#208#181#209#130#209#129#209#143' dhc'+
'lient. '#208#158#208#182#208#184#208#180#208#176#208#185#209#130#208#181+
'...'


# hash value = 103046174
unit1.message50=#208#158#208#191#209'€'#208#181#208#180#208#181#208#187#209+
#143#209#142#209#130#209#129#209#143' ip-'#208#176#208#180#209'€'#208#181+
#209#129#208#176' vpn-'#209#129#208#181#209'€'#208#178#208#181#209'€'#208+
#176' '#209#135#208#181#209'€'#208#181#208#183' '#208#186#208#190#208#188+
#208#176#208#189#208#180#209#131' host '#208#184#208#183' '#208#191#208#176+
#208#186#208#181#209#130#208#176' bind-utils. '#208#158#208#182#208#184#208+
#180#208#176#208#185#209#130#208#181'...'


# hash value = 66088158
unit1.message51=#208#158#209#130#208#188#208#181#208#189#209#143#208#181#209+
#130#209#129#209#143' '#208#191#208#190#208#187#209#131#209#135#208#181#208+
#189#208#184#208#181' '#208#188#208#176#209'€'#209#136#209'€'#209#131#209+
#130#208#190#208#178' '#209#135#208#181#209'€'#208#181#208#183' dhcp. '#208+
#158#208#182#208#184#208#180#208#176#208#185#209#130#208#181'...'


# hash value = 245894621
unit1.message52=#208#159#208#184#208#189#208#179' '#208#191#209'€'#208#190+
#208#178#208#181#209'€'#208#181#208#189

# hash value = 265400286
unit1.message53=#208#156#208#184#208#189#209#131#209#130#208#190#209#135#208+
#186#209#131'...'


# hash value = 28625838
unit1.message54=#208#157#208#181' '#208#190#208#191#209'€'#208#181#208#180+
#208#181#208#187#208#184#208#187#208#190#209#129#209#140' '#208#189#208#184+
' '#208#190#208#180#208#189#208#190#208#179#208#190' ip-'#208#176#208#180+
#209'€'#208#181#209#129#208#176' vpn-'#209#129#208#181#209'€'#208#178#208+
#181#209'€'#208#176'.'


# hash value = 250487838
unit1.message55=#208#167#208#176#209#129#209#130#208#190' '#208#184#209#129+
#208#191#208#190#208#187#209#140#208#183#209#131#208#181#209#130#209#129#209+
#143' '#208#176#209#131#209#130#208#181#208#189#209#130#208#184#209#132#208+
#184#208#186#208#176#209#134#208#184#209#143' mschap v2 - '#209#141#209#130+
#208#190' '#208#190#208#180#208#189#208#190#208#178#209'€'#208#181#208#188+
#208#181#208#189#208#189#209#139#208#185' '#208#178#209#139#208#177#208#190+
#209'€ refuse-eap, refuse-chap, refuse-mschap.'


# hash value = 25813646
unit1.message56=#208#173#209#130#208#176' '#208#190#208#191#209#134#208#184+
#209#143' '#209#129#208#190#208#183#208#180#208#176#208#181#209#130' '#209+
#143#209'€'#208#187#209#139#208#186' ponoff '#208#189#208#176' '#208#160#208+
#176#208#177#208#190#209#135#208#181#208#188' '#209#129#209#130#208#190#208+
#187#208#181' '#208#180#208#187#209#143' '#208#180#208#190#209#129#209#130+
#209#131#208#191#208#176' '#208#178' '#208#184#208#189#209#130#208#181#209+
'€'#208#189#208#181#209#130' '#208#191#208#190#208#187#209#140#208#183#208+
#190#208#178#208#176#209#130#208#181#208#187#209#142', '#208#191#208#190#208+
#183#208#178#208#190#208#187#209#143#209#143' '#208#181#208#188#209#131' '+
#209#131#208#191#209'€'#208#176#208#178#208#187#209#143#209#130#209#140' '+
#209#129#208#190#208#181#208#180#208#184#208#189#208#181#208#189#208#184#208+
#181#208#188' '#209#135#208#181#209'€'#208#181#208#183' '#208#184#208#186+
#208#190#208#189#208#186#209#131' '#208#178' '#209#130#209'€'#208#181#208+
#181'.'


# hash value = 86242238
unit1.message57=#208#148#208#187#209#143' '#209#130#208#190#208#179#208#190+
', '#209#135#209#130#208#190#208#177#209#139' '#209'€'#208#176#208#183#209+
'€'#208#181#209#136#208#184#209#130#209#140' '#208#191#208#190#208#187#209+
#140#208#183#208#190#208#178#208#176#209#130#208#181#208#187#209#143#208#188+
' '#209#131#208#191#209'€'#208#176#208#178#208#187#209#143#209#130#209#140+
' '#208#191#208#190#208#180#208#186#208#187#209#142#209#135#208#181#208#189+
#208#184#208#181#208#188' '#209#129#208#189#208#176#209#135#208#176#208#187+
#208#176' '#209#131#209#129#209#130#208#176#208#189#208#190#208#178#208#184+
#209#130#208#181' '#208#191#208#176#208#186#208#181#209#130' sudo.'


# hash value = 63210846
unit1.message58=#208#159#209'€'#208#184' '#208#184#209#129#208#191#208#190+
#208#187#209#140#208#183#208#190#208#178#208#176#208#189#208#184#208#184' '+
#208#190#208#191#209#134#208#184#208#184' refuse-chap '#208#180#208#181#208+
#188#208#190#208#189' pppd '#208#189#208#181' '#209#129#208#190#208#179#208+
#187#208#176#209#129#208#184#209#130#209#129#209#143' '#208#176#209#131#209+
#130#208#181#208#189#209#130#208#184#209#132#208#184#209#134#208#184#209'€'+
#208#190#208#178#208#176#209#130#209#140' '#209#129#208#181#208#177#209#143+
' '#208#191#208#190' '#208#191#209'€'#208#190#209#130#208#190#208#186#208+
#190#208#187#209#131' CHAP.'


# hash value = 31588846
unit1.message59=#208#146#209#139#208#177#208#190#209'€ '#208#190#208#191#209+
#134#208#184#208#184' '#208#176#208#178#209#130#208#190#208#183#208#176#208+
#191#209#131#209#129#208#186#208#176' '#208#184#208#189#209#130#208#181#209+
'€'#208#189#208#181#209#130#208#176' '#208#191#209'€'#208#184' '#209#129#209+
#130#208#176#209'€'#209#130#208#181' '#209#129#208#184#209#129#209#130#208+
#181#208#188#209#139' '#208#178#208#190#208#183#208#188#208#190#208#182#208+
#181#208#189' '#209#130#208#190#208#187#209#140#208#186#208#190' '#208#191+
#209'€'#208#184' '#208#178#209#139#208#177#208#190#209'€'#208#181' '#208#190+
#208#191#209#134#208#184#208#184' '#209'€'#208#176#208#183#209'€'#208#181+
#209#136#208#181#208#189#208#184#209#143' '#208#191#208#190#208#187#209#140+
#208#183#208#190#208#178#208#176#209#130#208#181#208#187#209#143#208#188' '+
#209#131#208#191#209'€'#208#176#208#178#208#187#209#143#209#130#209#140' '+
#208#191#208#190#208#180#208#186#208#187#209#142#209#135#208#181#208#189#208+
#184#208#181#208#188'.'


# hash value = 32361774
unit1.message60=#208#144#208#178#209#130#208#190#208#183#208#176#208#191#209+
#131#209#129#208#186' '#208#184#208#189#209#130#208#181#209'€'#208#189#208+
#181#209#130#208#176' '#208#191#209'€'#208#184' '#209#129#209#130#208#176+
#209'€'#209#130#208#181' '#209#129#208#184#209#129#209#130#208#181#208#188+
#209#139' '#208#189#208#181' '#208#189#208#176#209#129#209#130#209'€'#208+
#190#208#181#208#189'. '#208#158#209#130#209#129#209#131#209#130#209#129#209+
#130#208#178#209#131#208#181#209#130' ~/.config/autostart/ '#208#184#208#187+
#208#184' '#208#184#209#129#208#191#208#190#208#187#209#140#208#183#209#131+
#208#181#209#130#209#129#209#143' '#208#189#208#181#209#129#209#130#208#176+
#208#189#208#180#208#176#209'€'#209#130#208#189#209#139#208#185' '#208#184+
#208#180#208#181#208#189#209#130#208#184#209#132#208#184#208#186#208#176#209+
#130#208#190#209'€ '#208#191#208#190#208#187#209#140#208#183#208#190#208#178+
#208#176#209#130#208#181#208#187#209#143'.'


# hash value = 93716174
unit1.message61=#208#144#208#178#209#130#208#190#208#183#208#176#208#191#209+
#131#209#129#208#186' '#208#184#208#189#209#130#208#181#209'€'#208#189#208+
#181#209#130#208#176' '#208#191#209'€'#208#184' '#209#129#209#130#208#176+
#209'€'#209#130#208#181' '#209#129#208#184#209#129#209#130#208#181#208#188+
#209#139' '#208#189#208#181' '#208#189#208#176#209#129#209#130#209'€'#208+
#190#208#181#208#189'. '#208#158#209#130#209#129#209#131#209#130#209#129#209+
#130#208#178#209#131#208#181#209#130' '#209#132#208#176#208#185#208#187' '+
'/usr/share/applications/ponoff.desktop.'


# hash value = 20134222
unit1.message62=#208#173#209#130#208#176' '#208#190#208#191#209#134#208#184+
#209#143' '#208#190#209#129#209#131#209#137#208#181#209#129#209#130#208#178+
#208#187#209#143#208#181#209#130' '#208#176#208#178#209#130#208#190#208#183+
#208#176#208#191#209#131#209#129#208#186' '#208#184#208#189#209#130#208#181+
#209'€'#208#189#208#181#209#130#208#176' '#208#191#209'€'#208#184' '#209#129+
#209#130#208#176#209'€'#209#130#208#181' '#209#129#208#184#209#129#209#130+
#208#181#208#188#209#139' '#208#177#208#181#208#183' '#208#184#209#129#208+
#191#208#190#208#187#209#140#208#183#208#190#208#178#208#176#208#189#208#184+
#209#143' ponoff. '#208#160#208#181#208#186#208#190#208#188#208#181#208#189+
#208#180#209#131#208#181#209#130#209#129#209#143' '#208#184#209#129#208#191+
#208#190#208#187#209#140#208#183#208#190#208#178#208#176#209#130#209#140' '+
#209#129' pppd(xl2tpd)-'#209'€'#208#181#208#186#208#190#208#189#208#189#208+
#181#208#186#209#130#208#190#208#188'.'


# hash value = 233864046
unit1.message63=#208#157#208#181' '#208#180#208#190#208#191#209#131#209#129+
#209#130#208#184#208#188' '#208#190#208#180#208#189#208#190#208#178#209'€'+
#208#181#208#188#208#181#208#189#208#189#209#139#208#185' '#208#178#209#139+
#208#177#208#190#209'€ '#208#179#209'€'#208#176#209#132#208#184#209#135#208+
#181#209#129#208#186#208#190#208#179#208#190' '#208#176#208#178#209#130#208+
#190#208#183#208#176#208#191#209#131#209#129#208#186#208#176' '#208#184#208+
#189#209#130#208#181#209'€'#208#189#208#181#209#130#208#176' '#208#191#209+
'€'#208#184' '#209#129#209#130#208#176#209'€'#209#130#208#181' '#209#129#208+
#184#209#129#209#130#208#181#208#188#209#139' '#208#184' '#208#176#208#178+
#209#130#208#190#208#183#208#176#208#191#209#131#209#129#208#186' '#208#180+
#208#181#208#188#208#190#208#189#208#190#208#188' pppd(xl2tpd) '#208#177#208+
#181#208#183' '#208#179#209'€'#208#176#209#132#208#184#208#186#208#184'.'


# hash value = 93162974
unit1.message64=#208#173#209#130#208#176' '#208#190#208#191#209#134#208#184+
#209#143' '#208#191#208#190#208#187#208#181#208#183#208#189#208#176' '#208+
#181#209#129#208#187#208#184' VPN PPTP/L2TP '#208#189#208#181' '#208#180#208+
#190#208#187#208#182#208#189#208#190' '#208#177#209#139#209#130#209#140' '+
#208#179#208#187#208#176#208#178#208#189#209#139#208#188'.'


# hash value = 2435454
unit1.message65=#208#159#208#190#208#186#208#176' '#208#189#208#181#208#187+
#209#140#208#183#209#143' '#208#190#208#180#208#189#208#190#208#178#209'€'+
#208#181#208#188#208#181#208#189#208#189#208#190' '#208#178#209#139#208#177+
#209'€'#208#176#209#130#209#140' '#208#176#208#178#209#130#208#190#208#183+
#208#176#208#191#209#131#209#129#208#186' '#208#184#208#189#209#130#208#181+
#209'€'#208#189#208#181#209#130#208#176' '#208#180#208#181#208#188#208#190+
#208#189#208#190#208#188' pppd(xl2tpd) '#208#184' '#208#189#208#181#208#184+
#208#183#208#188#208#181#208#189#209#143#209#130#209#140' '#208#180#208#181+
#209#132#208#190#208#187#209#130#208#189#209#139#208#185' '#209#136#208#187+
#209#142#208#183', '#208#183#208#176#208#191#209#131#209#129#209#130#208#184+
#208#178' VPN PPTP/L2TP '#208#178' '#209#132#208#190#208#189#208#181'.'


# hash value = 1794142
unit1.message66=#208#157#208#181' '#209#131#208#180#208#176#208#187#208#190+
#209#129#209#140' '#208#176#208#178#209#130#208#190#208#188#208#176#209#130+
#208#184#209#135#208#181#209#129#208#186#208#184' '#208#190#208#191#209'€'+
#208#181#208#180#208#181#208#187#208#184#209#130#209#140' '#208#189#208#184+
' DNS1 '#208#180#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130+
#208#184#209#143' VPN, '#208#189#208#184' DNS2 '#208#180#208#190' '#208#191+
#208#190#208#180#208#189#209#143#209#130#208#184#209#143' VPN.'


# hash value = 26707966
unit1.message67=#208#159#208#190#208#187#208#181' "DNS1 '#208#180#208#190+
' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209#143' VPN"'+
' '#208#183#208#176#208#191#208#190#208#187#208#189#208#181#208#189#208#190+
' '#208#189#208#181#208#178#208#181#209'€'#208#189#208#190'. '#208#159#209+
'€'#208#176#208#178#208#184#208#187#209#140#208#189#208#190': xxx.xxx.xxx'+
'.xxx, '#208#179#208#180#208#181' xxx - '#209#135#208#184#209#129#208#187+
#208#190' '#208#190#209#130' 0 '#208#180#208#190' 255.'


# hash value = 26707710
unit1.message68=#208#159#208#190#208#187#208#181' "DNS2 '#208#180#208#190+
' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209#143' VPN"'+
' '#208#183#208#176#208#191#208#190#208#187#208#189#208#181#208#189#208#190+
' '#208#189#208#181#208#178#208#181#209'€'#208#189#208#190'. '#208#159#209+
'€'#208#176#208#178#208#184#208#187#209#140#208#189#208#190': xxx.xxx.xxx'+
'.xxx, '#208#179#208#180#208#181' xxx - '#209#135#208#184#209#129#208#187+
#208#190' '#208#190#209#130' 0 '#208#180#208#190' 255.'


# hash value = 73910990
unit1.message69=#208#157#208#181#208#190#208#177#209#133#208#190#208#180#208+
#184#208#188#208#190' '#208#178#208#178#208#181#209#129#209#130#208#184' '+
#209#133#208#190#209#130#209#143' '#208#177#209#139' '#208#190#208#180#208+
#189#208#190' DNS1 '#208#180#208#190' '#208#191#208#190#208#180#208#189#209+
#143#209#130#208#184#209#143' VPN '#208#184#208#187#208#184' DNS2 '#208#180+
#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209#143+
' VPN.'


# hash value = 162439678
unit1.message70=#208#159#209'€'#208#184' '#208#184#209#129#208#191#208#190+
#208#187#209#140#208#183#208#190#208#178#208#176#208#189#208#184#208#184' '+
#208#190#208#191#209#134#208#184#208#184' refuse-eap '#208#180#208#181#208+
#188#208#190#208#189' pppd '#208#189#208#181' '#209#129#208#190#208#179#208+
#187#208#176#209#129#208#184#209#130#209#129#209#143' '#208#176#209#131#209+
#130#208#181#208#189#209#130#208#184#209#132#208#184#209#134#208#184#209'€'+
#208#190#208#178#208#176#209#130#209#140' '#209#129#208#181#208#177#209#143+
' '#208#191#208#190' '#208#191#209'€'#208#190#209#130#208#190#208#186#208+
#190#208#187#209#131' EAP.'


# hash value = 202421214
unit1.message71=#208#173#209#130#208#176' '#208#190#208#191#209#134#208#184+
#209#143' '#209#135#208#176#209#129#209#130#208#190' '#208#191#208#190#208+
#183#208#178#208#190#208#187#209#143#208#181#209#130' '#208#180#208#190#209+
#129#209#130#208#184#209#135#209#140' '#209#131#209#129#208#186#208#190#209+
'€'#208#181#208#189#208#184#209#143' '#208#184#208#189#209#130#208#181#209+
'€'#208#189#208#181#209#130#208#176', '#208#189#208#190' '#208#189#208#181+
' '#209#131' '#208#178#209#129#208#181#209#133' '#208#191#209'€'#208#190#208+
#178#208#176#208#185#208#180#208#181#209'€'#208#190#208#178' '#208#184' '#208+
#189#208#181#208#178#209#129#208#181#208#179#208#180#208#176'.'


# hash value = 37920414
unit1.message72=#208#159#209'€'#208#184' '#208#184#209#129#208#191#208#190+
#208#187#209#140#208#183#208#190#208#178#208#176#208#189#208#184#208#184' '+
#208#190#208#191#209#134#208#184#208#184' refuse-mschap '#208#180#208#181+
#208#188#208#190#208#189' pppd '#208#189#208#181' '#209#129#208#190#208#179+
#208#187#208#176#209#129#208#184#209#130#209#129#209#143' '#208#176#209#131+
#209#130#208#181#208#189#209#130#208#184#209#132#208#184#209#134#208#184#209+
'€'#208#190#208#178#208#176#209#130#209#140' '#209#129#208#181#208#177#209+
#143' '#208#191#208#190' '#208#191#209'€'#208#190#209#130#208#190#208#186+
#208#190#208#187#209#131' MS-CHAP.'


# hash value = 97247470
unit1.message73=#208#159#208#184#208#189#208#179#209#131#208#181#209#130#209+
#129#209#143' DNS1-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208#180+
#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209#143+
' VPN. '#208#158#208#182#208#184#208#180#208#176#208#185#209#130#208#181'.'+
'..'


# hash value = 47776814
unit1.message74='DNS1-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#180#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209+
#143' VPN '#208#189#208#181' '#208#191#208#184#208#189#208#179#209#131#208+
#181#209#130#209#129#209#143' '#208#184#208#187#208#184' '#209#130#208#181+
#209'€'#209#143#209#142#209#130#209#129#209#143' '#208#191#208#176#208#186+
#208#181#209#130#209#139'. '#208#163#209#129#209#130#209'€'#208#176#208#189+
#208#184#209#130#208#181' '#208#191#209'€'#208#190#208#177#208#187#208#181+
#208#188#209#131' '#208#184' '#208#183#208#176#208#189#208#190#208#178#208+
#190' '#208#183#208#176#208#191#209#131#209#129#209#130#208#184#209#130#208+
#181' '#208#186#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208+
#176#209#130#208#190#209'€.'


# hash value = 181133566
unit1.message75=#208#159#208#184#208#189#208#179#209#131#208#181#209#130#209+
#129#209#143' DNS2-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208#180+
#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209#143+
' VPN. '#208#158#208#182#208#184#208#180#208#176#208#185#209#130#208#181'.'+
'..'


# hash value = 232326222
unit1.message76='DNS2-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#180#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209+
#143' VPN '#208#189#208#181' '#208#191#208#184#208#189#208#179#209#131#208+
#181#209#130#209#129#209#143' '#208#184#208#187#208#184' '#209#130#208#181+
#209'€'#209#143#209#142#209#130#209#129#209#143' '#208#191#208#176#208#186+
#208#181#209#130#209#139'. '#208#163#209#129#209#130#209'€'#208#176#208#189+
#208#184#209#130#208#181' '#208#191#209'€'#208#190#208#177#208#187#208#181+
#208#188#209#131' '#208#184' '#208#183#208#176#208#189#208#190#208#178#208+
#190' '#208#183#208#176#208#191#209#131#209#129#209#130#208#184#209#130#208+
#181' '#208#186#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208+
#176#209#130#208#190#209'€.'


# hash value = 162284030
unit1.message77=#208#159#209'€'#208#184' '#208#184#209#129#208#191#208#190+
#208#187#209#140#208#183#208#190#208#178#208#176#208#189#208#184#208#184' '+
#208#190#208#191#209#134#208#184#208#184' refuse-pap '#208#180#208#181#208+
#188#208#190#208#189' pppd '#208#189#208#181' '#209#129#208#190#208#179#208+
#187#208#176#209#129#208#184#209#130#209#129#209#143' '#208#176#209#131#209+
#130#208#181#208#189#209#130#208#184#209#132#208#184#209#134#208#184#209'€'+
#208#190#208#178#208#176#209#130#209#140' '#209#129#208#181#208#177#209#143+
' '#208#191#208#190' '#208#191#209'€'#208#190#209#130#208#190#208#186#208+
#190#208#187#209#131' PAP.'


# hash value = 77475246
unit1.message78=#208#159#209'€'#208#184' '#208#184#209#129#208#191#208#190+
#208#187#209#140#208#183#208#190#208#178#208#176#208#189#208#184#208#184' '+
#208#190#208#191#209#134#208#184#208#184' refuse-mschap-v2 '#208#180#208#181+
#208#188#208#190#208#189' pppd '#208#189#208#181' '#209#129#208#190#208#179+
#208#187#208#176#209#129#208#184#209#130#209#129#209#143' '#208#176#209#131+
#209#130#208#181#208#189#209#130#208#184#209#132#208#184#209#134#208#184#209+
'€'#208#190#208#178#208#176#209#130#209#140' '#209#129#208#181#208#177#209+
#143' '#208#191#208#190' '#208#191#209'€'#208#190#209#130#208#190#208#186+
#208#190#208#187#209#131' MS-CHAPv2.'


# hash value = 106651966
unit1.message79=#208#158#208#191#209#134#208#184#209#143' required '#208#180+
#208#181#208#187#208#176#208#181#209#130' '#209#136#208#184#209#132#209'€'+
#208#190#208#178#208#176#208#189#208#184#208#181' mppe '#208#190#208#177#209+
#143#208#183#208#176#209#130#208#181#208#187#209#140#208#189#209#139#208#188+
' '#208#184' '#209#130#209'€'#208#181#208#177#209#131#208#181#209#130' '#208+
#181#208#179#208#190' '#208#184#209#129#208#191#208#190#208#187#209#140#208+
#183#208#190#208#178#208#176#209#130#209#140' - '#208#189#208#181' '#209#129+
#208#190#208#181#208#180#208#184#208#189#209#143#209#130#209#140#209#129#209+
#143' '#208#181#209#129#208#187#208#184' '#208#191#209'€'#208#190#208#178+
#208#176#208#185#208#180#208#181#209'€ '#208#189#208#181' '#208#191#208#190+
#208#180#208#180#208#181#209'€'#208#182#208#184#208#178#208#176#208#181#209+
#130' '#209#136#208#184#209#132#209'€'#208#190#208#178#208#176#208#189#208+
#184#208#181' mppe.'


# hash value = 205888078
unit1.message80=#208#146#209#139#208#177#209'€'#208#176#208#189#208#176' '+
#208#190#208#191#209#134#208#184#209#143' usepeerdns: '#208#181#209#129#208+
#187#208#184' vpn-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208#191+
#209'€'#208#181#208#180#208#190#209#129#209#130#208#176#208#178#208#184#209+
#130' '#209#129#208#178#208#190#208#184' dns, '#209#130#208#190' '#208#177+
#209#131#208#180#209#131#209#130' '#208#184#209#129#208#191#208#190#208#187+
#209#140#208#183#208#190#208#178#208#176#209#130#209#140#209#129#209#143' '+
#208#190#208#189#208#184', '#208#189#208#181#208#178#208#183#208#184#209'€'+
#208#176#209#143' '#208#189#208#176' '#208#180#209'€'#209#131#208#179#208+
#184#208#181' '#208#189#208#176#209#129#209#130#209'€'#208#190#208#185#208+
#186#208#184' dns.'


# hash value = 38235790
unit1.message81=#208#159#208#190#208#187#208#181' "DNS1 '#208#191#209'€'#208+
#184' '#208#191#208#190#208#180#208#189#209#143#209#130#208#190#208#188' '+
'VPN" '#208#183#208#176#208#191#208#190#208#187#208#189#208#181#208#189#208+
#190' '#208#189#208#181#208#178#208#181#209'€'#208#189#208#190'. '#208#159+
#209'€'#208#176#208#178#208#184#208#187#209#140#208#189#208#190': xxx.xxx'+
'.xxx.xxx, '#208#179#208#180#208#181' xxx - '#209#135#208#184#209#129#208+
#187#208#190' '#208#190#209#130' 0 '#208#180#208#190' 255.'


# hash value = 38301326
unit1.message82=#208#159#208#190#208#187#208#181' "DNS2 '#208#191#209'€'#208+
#184' '#208#191#208#190#208#180#208#189#209#143#209#130#208#190#208#188' '+
'VPN" '#208#183#208#176#208#191#208#190#208#187#208#189#208#181#208#189#208+
#190' '#208#189#208#181#208#178#208#181#209'€'#208#189#208#190'. '#208#159+
#209'€'#208#176#208#178#208#184#208#187#209#140#208#189#208#190': xxx.xxx'+
'.xxx.xxx, '#208#179#208#180#208#181' xxx - '#209#135#208#184#209#129#208+
#187#208#190' '#208#190#209#130' 0 '#208#180#208#190' 255.'


# hash value = 31504302
unit1.message83=#208#157#208#181#208#190#208#177#209#133#208#190#208#180#208+
#184#208#188#208#190' '#208#178#208#178#208#181#209#129#209#130#208#184' '+
#209#133#208#190#209#130#209#143' '#208#177#209#139' '#208#190#208#180#208+
#189#208#190' DNS1 '#208#191#209'€'#208#184' '#208#191#208#190#208#180#208+
#189#209#143#209#130#208#190#208#188' VPN '#208#184#208#187#208#184' DNS2'+
' '#208#191#209'€'#208#184' '#208#191#208#190#208#180#208#189#209#143#209+
#130#208#190#208#188' VPN.'


# hash value = 60347806
unit1.message84='DNS2-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#180#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209+
#143' VPN '#208#189#208#181' '#208#191#208#184#208#189#208#179#209#131#208+
#181#209#130#209#129#209#143' '#208#184#208#187#208#184' '#209#130#208#181+
#209'€'#209#143#209#142#209#130#209#129#209#143' '#208#191#208#176#208#186+
#208#181#209#130#209#139', '#208#189#208#190' '#208#191#208#184#208#189#208+
#179#209#131#208#181#209#130#209#129#209#143' DNS1-'#209#129#208#181#209'€'+
#208#178#208#181#209'€ '#208#180#208#190' '#208#191#208#190#208#180#208#189+
#209#143#209#130#208#184#209#143' VPN, '#208#191#208#190#209#141#209#130#208+
#190#208#188#209#131' '#209#141#209#130#208#190' '#208#189#208#181#208#186+
#209'€'#208#184#209#130#208#184#209#135#208#189#208#190'.'


# hash value = 207394798
unit1.message85='DNS1-'#209#129#208#181#209'€'#208#178#208#181#209'€ '#208+
#180#208#190' '#208#191#208#190#208#180#208#189#209#143#209#130#208#184#209+
#143' VPN '#208#189#208#181' '#208#191#208#184#208#189#208#179#209#131#208+
#181#209#130#209#129#209#143' '#208#184#208#187#208#184' '#209#130#208#181+
#209'€'#209#143#209#142#209#130#209#129#209#143' '#208#191#208#176#208#186+
#208#181#209#130#209#139', '#208#189#208#190' '#208#191#208#184#208#189#208+
#179#209#131#208#181#209#130#209#129#209#143' DNS2-'#209#129#208#181#209'€'+
#208#178#208#181#209'€ '#208#180#208#190' '#208#191#208#190#208#180#208#189+
#209#143#209#130#208#184#209#143' VPN, '#208#191#208#190#209#141#209#130#208+
#190#208#188#209#131' '#208#177#209#131#208#180#209#131#209#130' '#209#130+
#208#190#209'€'#208#188#208#190#208#183#208#176'.'


# hash value = 125826076
unit1.message86=#208#159#208#190#208#186#208#176#208#183#208#176#209#130#209+
#140' '#208#191#208#176#209'€'#208#190#208#187#209#140

# hash value = 73569772
unit1.message87=#208#161#208#186#209'€'#209#139#209#130#209#140' '#208#191+
#208#176#209'€'#208#190#208#187#209#140

# hash value = 39128910
unit1.message88=#208#167#208#176#209#129#209#130#208#190' '#208#184#209#129+
#208#191#208#190#208#187#209#140#208#183#209#131#208#181#209#130#209#129#209+
#143' '#209#136#208#184#209#132#209'€'#208#190#208#178#208#176#208#189#208+
#184#208#181' '#209#130#209'€'#208#176#209#132#208#184#208#186#208#176' m'+
'ppe '#209#129' 128-'#208#177#208#184#209#130#208#189#209#139#208#188' '#209+
#136#208#184#209#132#209'€'#208#190#208#178#208#176#208#189#208#184#208#181+
#208#188' - '#209#141#209#130#208#190' '#208#190#208#180#208#189#208#190#208+
#178#209'€'#208#181#208#188#208#181#208#189#208#189#209#139#208#185' '#208+
#178#209#139#208#177#208#190#209'€ required, stateless, no40, no56.'


# hash value = 267301006
unit1.message89=#208#158#208#191#209#134#208#184#209#143' stateless '#208+
#191#209#139#209#130#208#176#208#181#209#130#209#129#209#143' '#209'€'#208+
#181#208#176#208#187#208#184#208#183#208#190#208#178#208#176#209#130#209#140+
' '#209#136#208#184#209#132#209'€'#208#190#208#178#208#176#208#189#208#184+
#208#181' mppe '#208#178' '#209'€'#208#181#208#182#208#184#208#188#208#181+
' '#208#177#208#181#208#183' '#208#191#208#190#208#180#208#180#208#181#209+
'€'#208#182#208#186#208#184' '#209#129#208#190#209#129#209#130#208#190#209+
#143#208#189#208#184#208#185'.'


# hash value = 108528734
unit1.message90=#208#158#208#191#209#134#208#184#209#143' no40 '#208#190#209+
#130#208#186#208#187#209#142#209#135#208#176#208#181#209#130' 40-'#208#177+
#208#184#209#130#208#189#208#190#208#181' '#209#136#208#184#209#132#209'€'+
#208#190#208#178#208#176#208#189#208#184#208#181' mppe.'


# hash value = 134658654
unit1.message91=#208#158#208#191#209#134#208#184#209#143' no56 '#208#190#209+
#130#208#186#208#187#209#142#209#135#208#176#208#181#209#130' 56-'#208#177+
#208#184#209#130#208#189#208#190#208#181' '#209#136#208#184#209#132#209'€'+
#208#190#208#178#208#176#208#189#208#184#208#181' mppe.'


# hash value = 142796830
unit1.message92=#208#158#208#191#209#134#208#184#209#143' no128 '#208#190+
#209#130#208#186#208#187#209#142#209#135#208#176#208#181#209#130' 128-'#208+
#177#208#184#209#130#208#189#208#190#208#181' '#209#136#208#184#209#132#209+
'€'#208#190#208#178#208#176#208#189#208#184#208#181' mppe.'


# hash value = 157954120
unit1.message93=#208#159#209'€'#208#184#208#189#209#131#208#180#208#184#209+
#130#208#181#208#187#209#140#208#189#209#139#208#185' '#209'€'#208#181#209+
#129#209#130#208#176#209'€'#209#130' '#209#129#208#181#209#130#208#184

# hash value = 243869310
unit1.message94=#208#157#208#181#208#178#208#190#208#183#208#188#208#190#208+
#182#208#189#208#190' '#208#178#209#139#208#177#209'€'#208#176#209#130#209+
#140' VPN L2TP, '#209#130#208#176#208#186' '#208#186#208#176#208#186' '#208+
#189#208#181' '#209#131#209#129#209#130#208#176#208#189#208#190#208#178#208+
#187#208#181#208#189' '#208#191#208#176#208#186#208#181#209#130' xl2tpd.'


# hash value = 160105806
unit1.message95=#208#161#208#190#208#181#208#180#208#184#208#189#208#181#208+
#189#208#184#208#181' '#208#177#209#131#208#180#208#181#209#130' '#209#129+
#208#186#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208#184#209+
'€'#208#190#208#178#208#176#208#189#208#190' '#208#191#208#190' '#208#191+
#209'€'#208#190#209#130#208#190#208#186#208#190#208#187#209#131' VPN PPTP'+
'.'


# hash value = 206915561
unit1.message96=#208#152#209#129#208#191#208#190#208#187#209#140#208#183#208+
#190#208#178#208#176#209#130#209#140' '#208#178#209#129#209#130#209'€'#208+
#190#208#181#208#189#208#189#209#139#208#185' '#208#178' '#208#180#208#181+
#208#188#208#190#208#189' xl2tpd '#208#188#208#181#209#133#208#176#208#189+
#208#184#208#183#208#188' '#209'€'#208#181#208#186#208#190#208#189#208#189+
#208#181#208#186#209#130#208#176' ('#208#189#208#181' '#209'€'#208#181#208+
#186#208#190#208#188#208#181#208#189#208#180#209#131#208#181#209#130#209#129+
#209#143' '#208#181#209#129#208#187#208#184' '#208#189#208#181#209#129#208+
#186#208#190#208#187#209#140#208#186#208#190' '#209#129#208#181#209#130#208+
#181#208#178#209#139#209#133' '#208#186#208#176#209'€'#209#130')'


# hash value = 87658439
unit1.message97=#208#146#208#181#209#129#209#130#208#184' '#208#187#208#190+
#208#179' pppd '#208#178' /var/log/pppd.log '#208#184' '#208#187#208#190#208+
#179' xl2tpd '#208#178' /var/log/syslog'


# hash value = 168835033
unit1.message98=#208#144#208#178#209#130#208#190#208#183#208#176#208#191#209+
#131#209#129#208#186' '#208#184#208#189#209#130#208#181#209'€'#208#189#208+
#181#209#130#208#176' '#208#191#209'€'#208#184' '#209#129#209#130#208#176+
#209'€'#209#130#208#181' '#209#129#208#184#209#129#209#130#208#181#208#188+
#209#139' '#208#180#208#181#208#188#208#190#208#189#208#190#208#188' xl2t'+
'pd '#208#177#208#181#208#183' '#208#179#209'€'#208#176#209#132#208#184#208+
#186#208#184' ('#208#189#208#181' '#209'€'#208#181#208#186#208#190#208#188+
#208#181#208#189#208#180#209#131#208#181#209#130#209#129#209#143' '#208#184+
#209#129#208#191#208#190#208#187#209#140#208#183#208#190#208#178#208#176#209+
#130#209#140')'


# hash value = 144793753
unit1.message99='I) '#208#146#208#178#208#181#208#180#208#184#209#130#208+
#181' '#208#176#208#180#209'€'#208#181#209#129' vpn-'#209#129#208#181#209+
'€'#208#178#208#181#209'€'#208#176'... ('#208#189#208#176#208#191#209'€'#208+
#184#208#188#208#181#209'€, vpn.internet.beeline.ru)'


# hash value = 216395641
unit1.message100='I) '#208#146#208#178#208#181#208#180#208#184#209#130#208+
#181' '#208#176#208#180#209'€'#208#181#209#129' vpn-'#209#129#208#181#209+
'€'#208#178#208#181#209'€'#208#176'... ('#208#189#208#176#208#191#209'€'#208+
#184#208#188#208#181#209'€, tp.internet.beeline.ru)'


# hash value = 170732990
unit1.message101=#208#148#208#187#209#143' VPN L2TP '#208#183#208#189#208+
#176#209#135#208#181#208#189#208#184#208#181' MTU '#208#180#208#190#208#187+
#208#182#208#189#208#190' '#208#177#209#139#209#130#209#140' '#208#188#208+
#181#208#189#209#140#209#136#208#181', '#209#135#208#181#208#188' '#208#180+
#208#187#209#143' VPN PPTP '#208#186#208#176#208#186' '#208#188#208#184#208+
#189#208#184#208#188#209#131#208#188' '#208#189#208#176' 20 '#208#177#208+
#176#208#185#209#130', '#208#189#208#190' '#208#189#208#181' '#208#177#208+
#190#208#187#208#181#208#181' '#209#135#208#181#208#188' 1460 '#208#177#208+
#176#208#185#209#130'.'


# hash value = 43435502
unit1.message102=#208#160#208#181#208#186#208#190#208#188#208#181#208#189+
#208#180#209#131#208#181#209#130#209#129#209#143' '#208#183#208#189#208#176+
#209#135#208#181#208#189#208#184#208#181' MTU 1400 '#208#177#208#176#208#185+
#209#130'. <'#208#158#208#154'> - '#208#184#208#179#208#189#208#190#209'€'+
#208#184#209'€'#208#190#208#178#208#176#209#130#209#140' '#209#141#209#130+
#208#190' '#208#191#209'€'#208#181#208#180#209#131#208#191#209'€'#208#181+
#208#182#208#180#208#181#208#189#208#184#208#181' '#208#184' '#208#191#209+
'€'#208#190#208#180#208#190#208#187#208#182#208#184#209#130#209#140'. <Ca'+
'ncel> - '#208#191#208#190#208#191#209'€'#208#176#208#178#208#184#209#130+
#209#140'.'


# hash value = 31729664
unit1.message103=#208#157#208#176#209#129#209#130#209'€'#208#190#208#185#208+
#186#208#176' VPN PPTP/L2TP'


# hash value = 240671950
unit1.message104=#208#159#208#190#208#187#208#181' "MRU" '#208#183#208#176+
#208#191#208#190#208#187#208#189#208#181#208#189#208#190' '#208#189#208#181+
#208#178#208#181#209'€'#208#189#208#190'. '#208#160#208#176#208#183#209'€'+
#208#181#209#136#208#181#208#189' '#208#187#208#184#209#136#209#140' '#208+
#180#208#184#208#176#208#191#208#176#208#183#208#190#208#189' [576..1460.'+
'.1492..1500].'

